refactor(templates): remove unnecessary 'this.' and '@root.' prefixes

--- a/src/preset/templates/commit.hbs
+++ b/src/preset/templates/commit.hbs
@@ -16,15 +16,15 @@
   , closes
   {{~#each references}} {{#if @root.linkReferences~}}
     [
-    {{~#if this.owner}}
-      {{~this.owner}}/
+    {{~#if owner}}
+      {{~owner}}/
     {{~/if}}
-    {{~this.repository}}{{this.prefix}}{{this.issue}}]({{issueUrlFormat}})
+    {{~repository}}{{prefix}}{{issue}}]({{issueUrlFormat}})
   {{~else}}
-    {{~#if this.owner}}
-      {{~this.owner}}/
+    {{~#if owner}}
+      {{~owner}}/
     {{~/if}}
-    {{~this.repository}}{{this.prefix}}{{this.issue}}
+    {{~repository}}{{prefix}}{{issue}}
   {{~/if}}{{/each}}
 {{~/if}}
 
