refactor(header): replace 'version' with 'currentTag' value

--- a/src/preset/templates/header.hbs
+++ b/src/preset/templates/header.hbs
@@ -1,7 +1,7 @@
 ## {{#if linkCompare~}}
-[{{version}}]({{compareUrlFormat}})
+[{{currentTag}}]({{compareUrlFormat}})
 {{~else}}
-{{~version}}
+{{~currentTag}}
 {{~/if}}
 {{~#if title}} "{{title}}"
 {{~/if}}
