--- a/src/preset/templates/main.hbs
+++ b/src/preset/templates/main.hbs
@@ -4,7 +4,7 @@
 {{#each noteGroups}}
 ### ⚠ {{title}}
 {{#each notes}}
-* {{#if commit.scope}}**{{commit.scope}}:** {{/if}}{{text}}
+* {{#if commit.scope}}`{{commit.scope}}` {{/if}}{{text}}
 {{/each}}
 
 {{/each}}
@@ -15,6 +15,7 @@
 {{/if}}
 {{#each commits}}
 {{> commit}}
+
 {{/each}}
 
 {{/each}}
