feat(templates): add link to current tag commits in header if it is the only tag

--- a/src/preset/templates/header.hbs
+++ b/src/preset/templates/header.hbs
@@ -1,7 +1,7 @@
-## {{#if linkCompare~}}
+## {{#if previousTag~}}
 [{{currentTag}}]({{compareUrlFormat}})
-{{~else}}
-{{~currentTag}}
+{{~else~}}
+[{{currentTag}}]({{host}}/{{owner}}/{{repository}}/commits/{{currentTag}})
 {{~/if}}
 {{~#if title}} "{{title}}"
 {{~/if}}
