feat(templates): add full changelog link to footer

--- a/src/preset/templates/footer.hbs
+++ b/src/preset/templates/footer.hbs
@@ -1,1 +1,10 @@
+{{#if fullChangelogLink~}}
+**Full Changelog:** {{#if previousTag~}}
+	[{{previousTag}}...{{currentTag}}]({{compareUrlFormat}})
+{{~else~}}
+	[...{{currentTag}}]({{host}}/{{owner}}/{{repository}}/commits/{{currentTag}})
+{{~/if}}
+
+
+{{/if}}
 
