style(templates/footer): remove '...' before `currentTag` for first release

--- a/src/preset/templates/footer.hbs
+++ b/src/preset/templates/footer.hbs
@@ -2,7 +2,7 @@
 **Full Changelog:** {{#if previousTag~}}
 	[{{previousTag}}...{{currentTag}}]({{compareUrlFormat}})
 {{~else~}}
-	[...{{currentTag}}]({{host}}/{{owner}}/{{repository}}/commits/{{currentTag}})
+	[{{currentTag}}]({{host}}/{{owner}}/{{repository}}/commits/{{currentTag}})
 {{~/if}}
 
 
