style(templates/footer): add backtick quotes

--- a/src/preset/templates/footer.hbs
+++ b/src/preset/templates/footer.hbs
@@ -1,8 +1,8 @@
 {{#if fullChangelogLink~}}
 **Full Changelog:** {{#if previousTag~}}
-	[{{previousTag}}...{{currentTag}}]({{compareUrlFormat}})
+	[`{{previousTag}}...{{currentTag}}`]({{compareUrlFormat}})
 {{~else~}}
-	[{{currentTag}}]({{host}}/{{owner}}/{{repository}}/commits/{{currentTag}})
+	[`{{currentTag}}`]({{host}}/{{owner}}/{{repository}}/commits/{{currentTag}})
 {{~/if}}
 
 
