style(templates): update footer link label to 'All Release Commits'

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -9,6 +9,6 @@
 {{/each}}
 
 {{/each}}
-##### &emsp;&ensp;&nbsp; 🔗 [Full Commit History: {{#if prevTag}}`{{prevTag}}` → `{{tag}}`]({{repo.homepage}}/compare/{{prevTag}}...{{tag}}){{else}}`{{tag}}`]({{repo.homepage}}/commits/{{tag}}){{/if}} &ensp;/&ensp; _{{date}}_
+##### &emsp;&ensp;&nbsp; 🔗 [All Release Commits: {{#if prevTag}}`{{prevTag}}` → `{{tag}}`]({{repo.homepage}}/compare/{{prevTag}}...{{tag}}){{else}}`{{tag}}`]({{repo.homepage}}/commits/{{tag}}){{/if}} &ensp;/&ensp; _{{date}}_
 
 
