style(templates): remove emoji from footer commit link

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -9,6 +9,6 @@
 {{/each}}
 
 {{/each}}
-##### &emsp;&ensp;&nbsp; 🔗 [_All Release Commits_]{{#if prevTag}}({{repo.homepage}}/compare/{{prevTag}}...{{tag}}){{else}}`{{tag}}`]({{repo.homepage}}/commits/{{tag}}){{/if}} &ensp;•&ensp; _{{date}}_
+##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_]{{#if prevTag}}({{repo.homepage}}/compare/{{prevTag}}...{{tag}}){{else}}`{{tag}}`]({{repo.homepage}}/commits/{{tag}}){{/if}} &ensp;•&ensp; _{{date}}_
 
 
