--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -4,9 +4,15 @@
 {{/header}}
 {{#each commitTypeGroups}}
 ### {{{repeat '&nbsp;' 5}}}{{title}}
+{{#if (eq @key 'breaking')}}
 {{#each commits}}
-* {{#if scope}}**{{scope}}**: {{/if}}{{#if (eq ../id 'breaking')}}{{{breakingChanges}}}{{else}}{{{subject}}}{{/if}} {{#if ../../commitHyperlink}}[`{{hash}}`]({{../../repo.homepage}}/commit/{{hash}}){{else}}{{hash}}{{/if}}
+* {{{breakingChanges}}}
 {{/each}}
+{{else}}
+{{#each commits}}
+* {{#if scope}}**{{scope}}**: {{/if}}{{{subject}}} {{#if ../../commitHyperlink}}[`{{hash}}`]({{../../repo.homepage}}/commit/{{hash}}){{else}}{{hash}}{{/if}}
+{{/each}}
+{{/if}}
 
 {{/each}}
 ##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_]{{#if prevTag}}({{repo.homepage}}/compare/{{prevTag}}...{{tag}}){{else}}`{{tag}}`]({{repo.homepage}}/commits/{{tag}}){{/if}} &ensp;•&ensp; _{{date}}_
