--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -15,6 +15,8 @@
 {{/if}}
 
 {{/each}}
+{{#>footer}}
 ##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_]{{#if prevTag}}({{repo.homepage}}/compare/{{prevTag}}...{{tag}}){{else}}`{{tag}}`]({{repo.homepage}}/commits/{{tag}}){{/if}} &ensp;•&ensp; _{{date}}_
 
 
+{{/footer}}
