feat(templates): add support for array-based breaking changes
- Add `isArray` helper to changelog options for array type checking
- Update `release.hbs` template to handle `breakingChanges` as both string and array
- Use conditional logic to render breaking changes as list items

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -5,9 +5,15 @@
 {{#each commitTypeGroups}}
 ### {{{repeat '&nbsp;' 5}}}{{title}}
 {{#if (eq @key 'breaking')}}
-{{#each commits}}
-* {{{breakingChanges}}}
-{{/each}}
+	{{#each commits}}
+		{{#if (isArray breakingChanges)}}
+			{{~#each breakingChanges~}}
+				- {{{this}}}
+			{{/each}}
+		{{else~}}
+			- {{{breakingChanges}}}
+		{{/if}}
+	{{/each}}
 {{else}}
 {{#each commits}}
 * {{#if scope}}**{{scope}}**: {{/if}}{{{subject}}} {{#if ../../commitHyperlink}}[`{{hash}}`]({{../../repo.homepage}}/commit/{{hash}}){{else}}{{hash}}{{/if}}
