--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -22,12 +22,12 @@
 
 {{/each}}
 {{#>footer}}
-##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_] {{" "}}
+##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_]
 {{~#if prevTag~}}
 	({{repo.homepage}}/compare/{{prevTag}}...{{tag}})
-{{~else}}
+{{~else~}}
 	({{repo.homepage}}/commits/{{tag}})
-{{/if~}}
+{{~/if}}
 {{" "}} &ensp;•&ensp; _{{date}}_
 
 
