feat(changelog): add breaking change indicators
- Add `isBreakingCommitInOtherTypeGroup` helper function to identify breaking commits appearing in other type groups
- Update `release.hbs` template to display warning emoji and reference index for breaking commits outside breaking section

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -8,15 +8,16 @@
 	{{#each commits}}
 		{{#if (isArray breakingChanges)}}
 			{{~#each breakingChanges~}}
-				- {{{this}}}
+				- {{{this}}} {{#if (isBreakingCommitInOtherTypeGroup ../this)}}<sup>[{{../breakingChangeIndex}}]</sup>{{/if}}
 			{{/each}}
 		{{else~}}
-			- {{{breakingChanges}}}
+			- {{{breakingChanges}}} {{#if (isBreakingCommitInOtherTypeGroup this)}}<sup>[{{breakingChangeIndex}}]</sup>{{/if}}
 		{{/if}}
 	{{/each}}
 {{else}}
 {{#each commits}}
-- {{#if scope}}**{{scope}}**: {{/if}}{{{subject}}} {{#if ../../commitHyperlink}}[`{{hash}}`]({{../../repo.homepage}}/commit/{{hash}}){{else}}{{hash}}{{/if}}
+- {{#if scope}}**{{scope}}**: {{/if}}{{{subject}}}{{#if ../../commitHyperlink}}[`{{hash}}`]({{../../repo.homepage}}/commit/{{hash}}){{else}}{{hash}}{{/if}}
+{{~#if breakingChanges}} ⚠️<sup>[{{breakingChangeIndex}}]</sup>{{/if}}
 {{/each}}
 {{/if}}
 
