refactor(changelog): replace `prevTag` and `prevVersion` with unified `prevRelease` object
- Update `ReleaseContext` interface to use `prevRelease: Partial<ReleaseWithTypeGroups>`
- Refactor changelog generation logic to create and use `prevRelease` object
- Update `release.hbs` template to reference `prevRelease.tag`

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -1,5 +1,5 @@
 {{#>header~}}
-	## &ensp; [` 📦 {{tag}}  `]({{repo.homepage}}/{{#if prevTag}}compare/{{prevTag}}...{{tag}}{{else}}commits/{{tag}}{{/if}})
+	## &ensp; [` 📦 {{tag}}  `]({{repo.homepage}}/{{#if prevRelease.tag}}compare/{{prevRelease.tag}}...{{tag}}{{else}}commits/{{tag}}{{/if}})
 
 {{/header}}
 
@@ -33,8 +33,8 @@
 
 {{~#>footer~}}
 	##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_]
-	{{~#if prevTag~}}
-		({{repo.homepage}}/compare/{{prevTag}}...{{tag}})
+	{{~#if prevRelease.tag~}}
+		({{repo.homepage}}/compare/{{prevRelease.tag}}...{{tag}})
 	{{~else~}}
 		({{repo.homepage}}/commits/{{tag}})
 	{{~/if~}}
