feat(changelog)!: add support for scope-based commit grouping
- Add `groupCommitsByScope` boolean option to changelog options
- Implement `groupCommitsByScope` function in config resolver
- Add `ScopeGroup` interface and `scopeGroups` property to `FilledTypeGroup`
- Update changelog template to render commits grouped by scope
- Add helper functions `isSingle`, `or`, and `not` for improved template logic
- Add tests for scope grouping functionality
- Enable scope-based commit grouping by default
- Update snapshots for new config config format

BREAKING CHANGE: The `groupCommitsByScope` option is now enabled by default.

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -8,6 +8,20 @@
 	{{~tag}}
 {{~/inline}}
 
+{{~#*inline "commit"~}}
+	{{{subject}}} {{" "}}
+	{{~#if @root.commitHyperlink~}}
+		[`{{hash}}`]({{@root.repo.homepage}}/commit/{{hash}})
+	{{~else~}}
+		{{hash}}
+	{{~/if~}}
+	{{~#if breakingChanges}} ⚠️<sup>[{{breakingChangeIndex}}]</sup>{{/if}}
+{{~/inline}}
+
+{{~#*inline "scope"~}}
+	{{#if scope}}**{{scope}}**: {{/if}}
+{{~/inline}}
+
 {{~#>header~}}
 	## &ensp; [` 📦 {{tag}}  `]({{>compareLink}})
 
@@ -27,15 +41,23 @@
 				{{/if}}
 			{{/each}}
 		{{else}}
-			{{#each commits~}}
-				- {{#if scope}}**{{scope}}**: {{/if}}{{{subject}}} {{" "}}
-				{{~#if @root.commitHyperlink~}}
-					[`{{hash}}`]({{@root.repo.homepage}}/commit/{{hash}})
-				{{~else~}}
-					{{hash}}
-				{{~/if~}}
-				{{~#if breakingChanges}} ⚠️<sup>[{{breakingChangeIndex}}]</sup>{{/if}}
-			{{/each}}
+			{{#if scopeGroups}}
+				{{#each scopeGroups~}}
+					{{~#if (or (isSingle commits) (not scope))}}
+						{{#each commits~}}
+							- {{>scope}}{{>commit}}
+						{{/each}}
+					{{else~}}
+						- {{>scope}}{{>br}}{{~#each commits}} {{" "~}}
+							- {{>commit}}
+						{{/each}}
+					{{/if}}
+				{{/each}}
+			{{else}}
+				{{#each commits~}}
+					- {{>scope}}{{>commit}}
+				{{/each}}
+			{{/if}}
 		{{/if}}
 
 	{{/each}}
