feat(changelog): add release changelog link to footer template
- Add `tagToUrlFragment` helper to convert tag to changelog URL fragment
- Add `changelogUrl` partial to generate changelog URL
- Update release template footer to include "Release Changelog" link
- Update changelog tests shapshots to reflect new footer format

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -64,7 +64,7 @@
 {{/main}}
 
 {{~#>footer~}}
-	##### &emsp;&ensp;&nbsp;&nbsp; [_All Release Commits_]({{>compareLink}}) &ensp;•&ensp; _{{date}}_
+	##### &emsp;&ensp;&nbsp;&nbsp; [_Release Changelog_]({{>changelogUrl}}) &ensp;•&ensp; [_All Release Commits_]({{>compareLink}}) &ensp;•&ensp; _{{date}}_
 
 
 {{/footer}}
