feat(changelog)!: display commits with breaking changes in all sections regardless of line limit
Sections exceeding `maxLinesPerRelease` now show only commits with breaking changes instead of being completely omitted.

- Update section filtering logic to always include commits with breaking changes
- Move `breakingChangesIndicator` partial from helper to `partials` in defaults
- Remove `isBreakingCommitInOtherTypeGroup` helper and corresponding template conditionals
- Add test for breaking changes visibility with strict line limits
- Update test snapshots with breaking change indicators

BREAKING CHANGE: The `isBreakingCommitInOtherTypeGroup` helper has been removed as it is no longer necessary: commits with breaking changes are now always displayed in their respective sections regardless of line limits.

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -9,10 +9,10 @@
 			{{#each commits}}
 				{{#if (isArray breakingChanges)}}
 					{{~#each breakingChanges~}}
-						- {{{this}}} {{#if (isBreakingCommitInOtherTypeGroup ../this)}}<sup>[{{../breakingChangeIndex}}]</sup>{{/if}}
+						- {{{this}}} {{>breakingChangesIndicator ../this}}
 					{{/each}}
 				{{else~}}
-					- {{{breakingChanges}}} {{#if (isBreakingCommitInOtherTypeGroup this)}}<sup>[{{breakingChangeIndex}}]</sup>{{/if}}
+					- {{{breakingChanges}}} {{>breakingChangesIndicator}}
 				{{/if}}
 			{{/each}}
 		{{else}}
