feat(changelog): apply sentence case formatting for breaking change descriptions
Add `toSentenceCase` helper that capitalizes the first letter and adds a period, then apply it to breaking change entries in the release template.

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -9,10 +9,10 @@
 			{{#each commits}}
 				{{#if (isArray breakingChanges)}}
 					{{~#each breakingChanges~}}
-						- {{{this}}} {{>breakingChangesIndicator ../this}}
+						- {{#toSentenceCase}}{{{this}}}{{/toSentenceCase}} {{>breakingChangesIndicator ../this}}
 					{{/each}}
 				{{else~}}
-					- {{{breakingChanges}}} {{>breakingChangesIndicator}}
+					- {{#toSentenceCase}}{{{breakingChanges}}}{{/toSentenceCase}} {{>breakingChangesIndicator}}
 				{{/if}}
 			{{/each}}
 		{{else}}
