refactor(changelog)!: rename `main` partial to `body` in release template
BREAKING CHANGE: The changelog partial previously named `main` has been renamed to `body`.

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -2,7 +2,7 @@
 	## &ensp; [` 📦 {{tag}}  `]({{>compareLink}}){{>br}}
 {{/header}}
 
-{{~#>main~}}
+{{~#>body~}}
 	{{#each commitTypeGroups~}}
 		### {{{repeat '&nbsp;' 5}}}{{title}}
 		{{#if (eq @key 'breaking')}}
@@ -36,7 +36,7 @@
 		{{/if}}
 
 	{{/each}}
-{{/main}}
+{{/body}}
 
 {{~#>footer~}}
 	##### &emsp;&ensp;&nbsp;&nbsp; {{#if footerChangelogUrl}}[_Release Changelog_]({{>changelogUrl}}) &ensp;•&ensp; {{/if}}[_All Release Commits_]({{>compareLink}}) &ensp;•&ensp; _{{date}}_{{>br}}{{>br}}
