refactor(changelog): split changelog URL partial into `changelogUrl` and `releaseChangelogUrl`
- Separate general changelog link and release-specific fragment link
- Update partials for improved clarity and usage

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -39,5 +39,5 @@
 {{/body}}
 
 {{~#>footer~}}
-	##### &emsp;&ensp;&nbsp;&nbsp; {{#if footerChangelogUrl}}[_Release Changelog_]({{>changelogUrl}}) &ensp;•&ensp; {{/if}}[_All Release Commits_]({{>compareLink}}) &ensp;•&ensp; _{{date}}_{{>br}}{{>br}}
+	##### &emsp;&ensp;&nbsp;&nbsp; {{#if footerChangelogUrl}}[_Release Changelog_]({{>releaseChangelogUrl}}) &ensp;•&ensp; {{/if}}[_All Release Commits_]({{>compareLink}}) &ensp;•&ensp; _{{date}}_{{>br}}{{>br}}
 {{/footer}}
