refactor(changelog): extract release title into separate partial for easier customization

--- a/src/templates/release.hbs
+++ b/src/templates/release.hbs
@@ -1,5 +1,5 @@
 {{~#>header~}}
-	## &ensp; [` 📦 {{tag}}  `]({{>compareLink}}){{>br}}
+	## &ensp; [` 📦 {{>releaseTitle}}  `]({{>compareLink}}){{>br}}
 {{/header}}
 
 {{~#>body~}}
